--- a/orders/templates/orders/order/your_order.html
+++ b/orders/templates/orders/order/your_order.html
@@ -5,9 +5,9 @@
     <title></title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-<meta name="keywords" content="Yours orders, return order, cancel orders, online grocery,online grocery store,online buy grocery sonipat, online grocery  shopping, online grocery store,online supermarket,grocery sonipat,grocery narender nagar, online grocery shopping india, buy groceries online,online grocery  sonipat haryana sonipat  online vegetable store, service shopping online,Online Grocery roop nagar, online grocery sectore 1a">
+<meta name="keywords" content="Farmket">
 
-<meta name="description" content="ou can manage your orders yourself  for return you can contact us ..online vegetables fruits and vegetables sale soft drink  sonipat   The best online grocery store in Sonipat.  is an online supermarket for all your daily needs. Online shopping now made easy with a wide range of groceries and home needs.">
+<meta name="description" content="Farmket">
 
 
 <link rel="dns-prefetch" href="//www.googletagmanager.com">
