--- a/service/templates/service/about.html
+++ b/service/templates/service/about.html
@@ -75,9 +75,60 @@
               <h2><span>Let Us</span> Tell You Our Story</h2>
               <img src="{% static 'service/img/core-img/decor.png' %}" alt="">
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetu adipiscing elit. Etiam nunc elit, pretium atlanta urna veloci, fermentum malesuda mina. Donec auctor nislec neque sagittis, sit amet dapibus pellentesque donal feugiat. Nulla mollis magna non
-              sanaliquet, volutpat do zutum, ultrices consectetur, ultrices at purus.</p>
-            <a href="#" class="btn famie-btn mt-30">Read More</a>
+
+<h2>
+            Prologue(Introduction):</h2><p><br>
+It's been said from the very onset of the human civilization that humans are the greatest assets of this world. What we believe at Farmket is, that not only they're the greatest but the most productive beings ever! By keeping this in mind, we've designed a platform full of the most productive and greatest humankind possible!
+
+</p>
+
+<br>
+<br>
+<h2 ><br>
+            Our Story:</h2>
+        <p>  <br>  We started off with a very humble beginning consisting of very limited resources and only a dedicated team of people whose life is devoted to working towards the betterment of the farming sector in India! We've always worked considering the farmers as our deities cause they provide us the basic nutrients to work our body out! We worship our work as much as we worship the farmers of our country and we always look forward to serve you in the best way possible!
+
+
+</p>
+            <br>
+            <br>
+            <br>
+<h2 style="margin-bottom:20px;">
+  Our Mission:</h2>
+<p>A great man once said, "Work today as you've to die tomorrow" and we at Farmket are the greatest believers of that philosophy! We are at a mission to completely transform the Agriculture Industry in India to a whole new level generating wealth and prosperity among the farmers and whole of the Industry! We consider our MISSION as our OBSESSION.
+</p>
+
+
+<br>
+<br>
+<br>
+<h2 >
+  Our Promise:</h2><br><br><p>
+We deliver a whole new level of customer experience in Agriculture never ever experienced before in the Industry! Our promise is to keep the experience to the highest level possible!
+          </p>
+<br>
+<br>
+
+
+<h2 style="margin-bottom:20px;">
+  Our Vibe:</h2><p>
+The work ethic at Farmket is no question of immense purity. We consider in equality and fairness of work. We never believe in degrading our vibe of awesomeness.
+
+          </p>
+            <br>
+            <br>
+            <br>
+
+
+<h2 style="margin-bottom:20px;">
+  Conclusion:</h2><p>
+We strive each and everyday to be better than our past self and we constantly improve the degree of work quality.
+We look forward to serve you the best and have a great experience ahead with Farmket!
+Thank You For Being With Us!
+Team Farmket
+            <br>
+            <b>(Co-founded by Surya Jain and Nikhil Dangi)</b></p>
+            <!--<a href="#" class="btn famie-btn mt-30">Read More</a>-->
           </div>
         </div>
 
