--- a/service/templates/service/main.html
+++ b/service/templates/service/main.html
@@ -3,10 +3,9 @@
 {% load staticfiles %}
 {% block head %}
 
-    <title>Farmket Agriculture. Shop .</title>
+    <title>Farmket India FullFilling The Needs Of Farmer..</title>
 
 
-	<title>Tour Template</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -182,8 +181,8 @@ padding: 2px 0;
                   <br>
 
                 <p data-animation="fadeInUp" data-delay="400ms">
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                <a href="#" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>
+                    We at Farmket believe in the power of human resources. These resources helps to build up the foundation of your business.</p>
+                    <!--<a href="#" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>-->
               </div>
             </div>
           </div>
@@ -198,8 +197,10 @@ padding: 2px 0;
               <div class="welcome-content">
                 <h2 data-animation="fadeInDown" data-delay="200ms" class="sltxt">The hearth of the farm is the true center of our universe.</h2>
                   <br>
-                <p data-animation="fadeInDown" data-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                <a href="#" class="btn famie-btn mt-4" data-animation="bounceInDown" data-delay="600ms">Contact Us</a>
+                <p data-animation="fadeInDown" data-delay="400ms">
+                     Our team is highly dedicated and focused towards building of a better today and a perfect tomorrow. We're available 24/7 at your service!
+                </p>
+                <!--<a href="#" class="btn famie-btn mt-4" data-animation="bounceInDown" data-delay="600ms">Contact Us</a>-->
               </div>
             </div>
           </div>
@@ -216,7 +217,8 @@ padding: 2px 0;
                   <br>
 
                 <p data-animation="fadeInUp" data-delay="400ms">
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                 Our hassle free machine renting works wonders considering the price and availability!
+                </p>
                 <a href="#" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>
               </div>
             </div>
@@ -234,8 +236,9 @@ padding: 2px 0;
                   <br>
 
                 <p data-animation="fadeInUp" data-delay="400ms">
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                <a href="#" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>
+                We give our best to provide you with A-Grade products with premium quality at affordable prices.
+                </p>
+                <a href="{% url 'service:contact_us' %}" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>
               </div>
             </div>
           </div>
@@ -252,8 +255,10 @@ padding: 2px 0;
                   <br>
 
                 <p data-animation="fadeInUp" data-delay="400ms">
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                <a href="#" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>
+
+    Lastly, we believe in complete customer satisfaction providing them with our best of resources plus services helping to build a better tomorrow!
+                </p>
+                <a href="{% url 'service:contact_us' %}" class="btn famie-btn mt-4" data-animation="bounceInUp" data-delay="600ms">Contact Us</a>
               </div>
             </div>
           </div>
