--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -11,7 +11,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
-	<title>Tour Template</title>
+	<title>fARMKET Farmker Fullfill needs</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
