--- a/service/templates/service/contact.html
+++ b/service/templates/service/contact.html
@@ -4,18 +4,18 @@
 
     {% block head %}
 
-    <title>Help,Support about us, You can contact u s our email and phone no,We help You Sniccy.</title>
+    <title>Farmket Help,Support about us, You can contact u s our email and phone no,We help You </title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Sniccy provide the best, user experiences service in sonipat you can get the" />
+	<meta name="description" content="farmket provide the best, user experiences service in sonipat you can get the" />
 	<meta name="keywords" content="" />
 	<meta name="author" content="" />
 
 <link rel="dns-prefetch" href="//www.googletagmanager.com">
 <link rel="dns-prefetch" href="//www.google-analytics.com">
-<link rel="canonical" href="http://www.com/service/contact_us/">
+<link rel="canonical" href="http://www.farmket.in/service/contact_us/">
 
 {% endblock %}
 
@@ -79,10 +79,10 @@
         <div class="col-12 col-md-4">
           <div class="single-information-area text-center mb-100 wow fadeInUp" data-wow-delay="100ms">
             <div class="contact-icon">
-              <i class="fa fa-map-marker-alt"></i>
+              <i class="fa fa-map-marker"></i>
             </div>
             <h5>Address</h5>
-            <h6>120 Raymond Rd, Canarsie, New York</h6>
+            <h6>India</h6>
           </div>
         </div>
 
@@ -93,7 +93,7 @@
               <i class="fa fa-phone"></i>
             </div>
             <h5>Phone</h5>
-            <h6>+84 223 9000</h6>
+            <h6>+91 8288974334,+91 7889104383</h6>
           </div>
         </div>
 
@@ -104,7 +104,7 @@
               <i class="fa fa-envelope"></i>
             </div>
             <h5>Email</h5>
-            <h6>info.deercreative@gmail.com</h6>
+            <h6>info.farmket@gmail.com</h6>
           </div>
         </div>
 
@@ -158,7 +158,7 @@
         <!-- Contact Maps -->
         <div class="col-lg-6">
           <div class="contact-maps mb-100">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28313.28917392649!2d-88.2740948914384!3d41.76219337461615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880efa1199df6109%3A0x8a1293b2ae8e0497!2sE+New+York+St%2C+Aurora%2C+IL%2C+USA!5e0!3m2!1sen!2sbd!4v1542893000723"
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1751930.3852026134!2d74.31838540651616!3d30.949852279393188!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391964aa569e7355%3A0x8fbd263103a38861!2sPunjab!5e0!3m2!1sen!2sin!4v1577476187949!5m2!1sen!2sin"
               allowfullscreen></iframe>
           </div>
         </div>
