--- a/service/templates/service/feedback.html
+++ b/service/templates/service/feedback.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block head %}
 
-    <title>FeedBack Us grocery store sonipat : Your feedback is valuables for us.. From farmket .</title>
+    <title>Farmket Feedback.</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="keywords" content="Feedback Us, feedback, connect,Your area valuable, online grocery farmket shopping, online grocery store,online supermarket,grocery sonipat,grocery narender nagar, online grocery shopping india, buy groceries online,online grocery  sonipat haryana sonipat  online vegetable store, service shopping online,Online Grocery roop nagar, online grocery sectore 1a">
