--- a/service/templates/service/index.html
+++ b/service/templates/service/index.html
@@ -5,11 +5,11 @@
 
 {% block head %}
 
-    <title>Fruits ,vegetables, Groceries,snacks ,beverages,sauce,and many more,at  store</title>
+    <title>Farmket The tru need of farmer.</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
-	<title>Tour Template</title>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
