--- a/service/templates/service/main.html
+++ b/service/templates/service/main.html
@@ -172,7 +172,7 @@ padding: 2px 0;
     <div class="welcome-slides owl-carousel">
 
       <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/1.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a1.jpeg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -190,7 +190,7 @@ padding: 2px 0;
       </div>
 
       <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/2.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a4.jpeg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -208,7 +208,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/3.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a3.jpeg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -227,7 +227,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/4.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a2.jpeg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -246,7 +246,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/5.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a5.jpeg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -272,13 +272,13 @@ padding: 2px 0;
 
 <div id="coros" style="margin-top:60px; margin-bottom:100px;">
 
-
+    <div><h2><font size="9px"><b>SERVICES</b></font></h2></div>
 {% if cate %}
 {% for v in cate  %}
 
 <!--PRODUCT SLIDER-->
 	<div style="margin-top:40px; margin-bottom:50px;">
-	<div class="container"><h1 >{{ v.name }}</h1></div>
+        <div class="container"><h1 ><u>{{ v.name }}</u></h1></div>
 <div class="owl-slider container">
 <div id="{{ v.id }}" class="owl-carousel core-class" style="">
 
