--- a/service/templates/service/main.html
+++ b/service/templates/service/main.html
@@ -172,7 +172,7 @@ padding: 2px 0;
     <div class="welcome-slides owl-carousel">
 
       <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a1.jpeg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup1.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -190,7 +190,7 @@ padding: 2px 0;
       </div>
 
       <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a4.jpeg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup2.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -208,7 +208,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a3.jpeg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup3.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -227,7 +227,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a2.jpeg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup4.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -246,7 +246,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/a5.jpeg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup5.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
