--- a/service/templates/service/main.html
+++ b/service/templates/service/main.html
@@ -16,11 +16,6 @@
 
 
 
-
-
-
-
-
 {% block body %}
 
 <style>
@@ -379,6 +374,7 @@ no album
   autoplay: true,
   lazyLoad: true,
   loop: true,
+  dots: false,
   margin: 20,
    /*
   animateOut: 'fadeOut',
