--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -366,7 +366,7 @@ text-decoration-line: none;
           <!-- Single Footer Widget Area -->
           <div class="col-12 col-sm-6 col-lg-3">
             <div class="footer-widget mb-80">
-              <a href="#" class="foo-logo d-block mb-30"><img src="{% static 'service/img/core-img/logo.jpg' %}" class="fml"></a>
+              <a href="#" class="foo-logo d-block mb-30"><img src="{% static 'service/img/core-img/logo11.png' %}" class="fml"></a>
 
 
             </div>
