--- a/orders/templates/orders/order/created.html
+++ b/orders/templates/orders/order/created.html
@@ -26,56 +26,17 @@
 
 
 {% block body %}
-<aside id="colorlib-hero" style="height:350px; overflow:hidden;">
-			<div class="flexslider">
-				<ul class="slides">
-			   	<li style="background-image: url({% static 'service/images/cover-img-4.jpg' %}); height:350px; ">
-			   		<div class="overlay"></div>
-			   		<div class="container-fluid">
-			   			<div class="row">
-				   			<div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12 slider-text">
-				   				<div class="slider-text-inner text-center">
-				   					<h2>by colorlib.com</h2>
-				   					<h1>Hotel Overview</h1>
-				   				</div>
-				   			</div>
-				   		</div>
-			   		</div>
-			   	</li>
-			  	</ul>
-		  	</div>
-		</aside>
-	<div class="colorlib-wrap">
+<div class="container" style="min-height:500px; margin-top:100px;">
+
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-			    <h3 class="page-header ">Thank You For Shopping With Us
-                </h3>
-                <p class="lead">Your order has been successfully completed. Your order ID is <strong>{{ order.id }}{{ order.o_id }} {{ order.name }}
+			    <h2 class="page-header ">Thank You For Booking With Us
+                </h2><br><br>
+               <h3><b> <b >Your order has been successfully completed. Your order ID is <strong>{{ order.id }}{{ order.o_id }} {{ order.name }}
 
-                </strong>.<br> Ordered will be delivered within  1 to 2 Hour .So we will contact u Soon,,</p>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<div id="colorlib-subscribe" style="background-image: url({% static 'service/images/img_bg_2.jpg' %});" data-stellar-background-ratio="0.5">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6 col-md-offset-3 text-center colorlib-heading animate-box">
-						<h2>Sign Up for a Newsletter</h2>
-						<p>Sign up for our mailing list to get latest updates and offers.</p>
-						<form class="form-inline qbstp-header-subscribe">
-							<div class="row">
-								<div class="col-md-12 col-md-offset-0">
-									<div class="form-group">
-										<input type="text" class="form-control" id="email" placeholder="Enter your email">
-										<button type="submit" class="btn btn-primary">Subscribe</button>
-									</div>
-								</div>
-							</div>
-						</form>
+			   </strong>.<br> Order will Be Completed Soon. </b></b>
+			   </h3>
 					</div>
 				</div>
 			</div>
