--- a/orders/templates/orders/order/paymentstatus.html
+++ b/orders/templates/orders/order/paymentstatus.html
@@ -7,7 +7,7 @@
 
 {% block head %}
 
-    <title>Fruits ,vegetables, Groceries,snacks ,beverages,sauce,and many more,at store</title>
+    <title>Farmket.in Farmer Needs Booking Status.</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 
