--- a/orders/templates/orders/order/paytm.html
+++ b/orders/templates/orders/order/paytm.html
@@ -5,9 +5,9 @@
     <title>Paytm merchant payment page</title>
 </head>
 <body>
-<h1> Farmket. Redirecting you to the Payment....</h1>
+<h1> Farmket. Redirecting you to the <Payment class="."></Payment></h1>
 <h1>Please do not refresh your page....</h1>
-<form action="https://securegw.paytm.in/theia/processTransaction" method="post" name="paytm">
+<form action="https://securegw-stage.paytm.in/order/process" method="post" name="paytm">
     {% for key, value in param_dict.items %}
     <input type="hidden" name="{{key}}" value="{{value}}">
     {% endfor %}
