--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -58,7 +58,7 @@
 									</div>
 							</div>
 							<div class="form-group text-center">
-								<input type="submit" value="Log In" class="btn btn-primary">
+								<input type="submit" value="Reset" class="btn btn-primary">
 							</div>
 
 						</form>
