--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -69,7 +69,7 @@ background-color:white;
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 animate-box" style=" margin-top:15%;">
 						<h3 style="text-align:center; margin-bottom:20px;">Booking... <span class="pull-right" style="color:red;">{{ error_message }}</span></h3>
-						<form action="{% url 'orders:order_create_cod'  shop.id %}" id="form-create" method="POST">
+						<form  id="form-create" method="POST">
 							{% csrf_token %}
 							<div class="row form-group">
 								<div class="col-md-6 col-xs-5 paddingbottom">
