--- a/service/templates/service/about.html
+++ b/service/templates/service/about.html
@@ -127,7 +127,7 @@ We look forward to serve you the best and have a great experience ahead with Far
 Thank You For Being With Us!
 Team Farmket
             <br>
-            <b>(Co-founded by Surya Jain and Nikhil Dangi)</b></p>
+            <b> ------------------BY Farmket MEMBERS</b></p>
             <!--<a href="#" class="btn famie-btn mt-30">Read More</a>-->
           </div>
         </div>
