--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -94,7 +94,7 @@ background-color:white;
                             </div>
 							<div class="row form-group">
 								<div class="col-md-12 paddin-bottom">
-									<label for="addr">Email</label>
+									<label for="addr">You Address.</label>
 									  <textarea name="addr" rows="10" cols="30"  required="required"  id="addr" class="form-control email farmket-f-radius" placeholder="Your  address"></textarea>
 
 								</div>
