--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -377,9 +377,9 @@ text-decoration-line: none;
               <div class="contact-info">
                   <h5 class="widget-title">FARMKET</h5>
                   <p>Farmket: The Complete. Need of the Farmer.</p>
-                <p><i class="fa fa-map-pin" aria-hidden="true"></i>Cu ,CHANDIGARH</p>
+                <p><i class="fa fa-map-pin" aria-hidden="true"></i>Mohali , Punjab</p>
                 <p><i class="fa fa-envelope" aria-hidden="true"></i>info.farmket@gmail.com</p>
-                <p><i class="fa fa-phone" aria-hidden="true"></i>798838xxxx</p>
+                <p><i class="fa fa-phone" aria-hidden="true"></i>8288974334</p>
               </div>
             </div>
         </div>
