--- a/service/templates/service/main.html
+++ b/service/templates/service/main.html
@@ -167,7 +167,7 @@ padding: 2px 0;
     <div class="welcome-slides owl-carousel">
 
       <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup1.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bimg1.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -185,7 +185,7 @@ padding: 2px 0;
       </div>
 
       <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup2.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bimg2.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -222,7 +222,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup4.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bimg4.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
@@ -241,7 +241,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup5.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bimg5.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
