--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -358,7 +358,7 @@ text-decoration-line: none;
   <!-- ##### Footer Area Start ##### -->
   <footer class="footer-area">
     <!-- Main Footer Area -->
-    <div class="main-footer bg-img bg-overlay section-padding-80-0" style="background-image: url({% static 'service/img/bg-img/3.jpg' %});">
+    <div class="main-footer bg-img bg-overlay section-padding-80-0" style="background-image: url({% static 'service/img/core-img/logomain.png' %});">
 
       <div class="container">
         <div class="row">
