--- a/service/templates/service/main.html
+++ b/service/templates/service/main.html
@@ -203,7 +203,7 @@ padding: 2px 0;
       </div>
 
  <!-- Single Welcome Slides -->
-      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bup3.jpg' %});">
+      <div class="single-welcome-slides bg-img bg-overlay jarallax" style="background-image: url({% static 'service/img/bg-img/bimg3.jpg' %});">
         <div class="container h-100">
           <div class="row h-100 align-items-center">
             <div class="col-12 col-lg-10">
