--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -358,7 +358,7 @@ text-decoration-line: none;
   <!-- ##### Footer Area Start ##### -->
   <footer class="footer-area">
     <!-- Main Footer Area -->
-    <div class="main-footer bg-img bg-overlay section-padding-80-0" style="background-image: url({% static 'service/img/core-img/logomain.png' %});">
+    <div class="main-footer bg-img bg-overlay section-padding-80-0" style="background-image: url({% static 'service/img/core-img/3.jpg' %});">
 
       <div class="container">
         <div class="row">
@@ -366,7 +366,7 @@ text-decoration-line: none;
           <!-- Single Footer Widget Area -->
           <div class="col-12 col-sm-6 col-lg-3">
             <div class="footer-widget mb-80">
-              <a href="#" class="foo-logo d-block mb-30"><img src="{% static 'service/img/core-img/logo11.png' %}" class="fml"></a>
+              <a href="#" class="foo-logo d-block mb-30"><img src="{% static 'service/img/core-img/logomain.png' %}" class="fml"></a>
 
 
             </div>
