--- a/service/templates/service/base.html
+++ b/service/templates/service/base.html
@@ -366,7 +366,7 @@ text-decoration-line: none;
           <!-- Single Footer Widget Area -->
           <div class="col-12 col-sm-6 col-lg-3">
             <div class="footer-widget mb-80">
-              <a href="#" class="foo-logo d-block mb-30"><img src="{% static 'service/img/core-img/logomain.png' %}" class="fml"></a>
+              <a href="#" class="foo-logo d-block mb-30"><img src="{% static 'service/img/core-img/logo11.png' %}" class="fml"></a>
 
 
             </div>
@@ -415,15 +415,15 @@ text-decoration-line: none;
               <h5 class="widget-title">STAY CONNECTED</h5>
               <!-- Footer Social Info -->
               <div class="footer-social-info">
-                <a href="#">
+                <a href="https://www.facebook.com/Farmket-102466048011973/">
                   <i class="fa fa-facebook" aria-hidden="true"></i>
                   <span>Facebook</span>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/farmket.in/">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <span>Instagram</span>
                 </a>
-                <a href="#">
+                <a href="https://in.pinterest.com/farmket/">
                   <i class="fa fa-pinterest" aria-hidden="true"></i>
                   <span>Pinterest</span>
                 </a>
